@@ -1,3 +1,8 @@
+2004-10-31  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/15172
+	* g++.dg/init/aggr2.C: New test.
+
 2004-10-31  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/18129
